fix alignment on question show page

--- a/app/assets/stylesheets/components/question_show.scss
+++ b/app/assets/stylesheets/components/question_show.scss
@@ -6,11 +6,9 @@
 
 .question-show-wrapper {
   display: flex;
-  width: 74%;
+  width: 1002px;
   margin: 0 auto;
   padding-top: 83px;
-  padding-left: 32px;
-  padding-right: 32px;
   padding-bottom: 32px;
   align-items: center;
   background: white;
